css/doorhanger.css
body {
  padding: 0;
  margin: 0;
  font-family: 'Open Sans', Frutiger, Calibri, 'Myriad Pro', Myriad, sans-serif !important; }

#password-toolbar {
  background-color: #fff;
  border-bottom: 1px;
  border-left: 1px;
  border-right: 1px;
  height: 41px;
  font-size: 14px;
  line-height: 30px;
  border-bottom: 1px solid #c9c9c9; }
  #password-toolbar .toolbar-text {
    float: left;
    display: inline-block;
    margin-top: 5px;
    padding-left: 10px;
    width: calc(100% - 400px);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis; }
  #password-toolbar .passman-btn {
    outline: none;
    float: right;
    display: inline-block;
    padding: 0 12px;
    line-height: 41px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: normal;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-image: none;
    background-color: #fff;
    color: #000;
    /*margin-right: 15px;*/
    border: 0px solid transparent; }
    #password-toolbar .passman-btn:hover {
      background-color: #c9c9c9; }
    #password-toolbar .passman-btn.btn-success {
      background: #3498db;
      color: #fff; }
    #password-toolbar .passman-btn.btn-cancel {
      color: #a8353c; }
    #password-toolbar .passman-btn.btn-save .btn-txt {
      padding-right: 5px; }
    #password-toolbar .passman-btn .caret-container {
      height: 100%;
      display: inline-block;
      padding: 0 5px;
      width: 50%;
      background-color: white;
      color: #000; }
      #password-toolbar .passman-btn .caret-container:hover {
        background-color: #c9c9c9; }
      #password-toolbar .passman-btn .caret-container > .caret-container-txt {
        border-bottom: 1px dashed #fff; }
  #password-toolbar .select_account {
    position: absolute;
    top: 45px;
    color: #333;
    width: 160px;
    right: 93px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.15);
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    padding: 5px 0; }
    #password-toolbar .select_account .account {
      display: block;
      padding: 3px 5px 3px 10px;
      clear: both;
      font-weight: 400;
      line-height: 1.42857143;
      color: #333;
      white-space: nowrap;
      text-align: left; }
      #password-toolbar .select_account .account:hover {
        color: #262626;
        text-decoration: none;
        background-color: #f5f5f5; }

